--- a/client/app/account/signup/signup.jade
+++ b/client/app/account/signup/signup.jade
@@ -15,21 +15,21 @@ div(ng-include='"components/navbar/navbar.html"')
         .form-group(ng-class='{ "has-success": form.email.$valid && submitted,\
         "has-error": form.email.$invalid && submitted }')
           label Email
-          input.form-control(type='email', name='email', ng-model='user.email', required='', mongoose-error='')
+          input.form-control(type='email', name='email', ng-model='user.email', required='')
           p.help-block(ng-show='form.email.$error.email && submitted')
             | Doesn't look like a valid email.
           p.help-block(ng-show='form.email.$error.required && submitted')
             | What's your email address?
-          p.help-block(ng-show='form.email.$error.mongoose')
+          p.help-block(ng-show='form.email.$error.reject')
             | {{ errors.email }}
 
         .form-group(ng-class='{ "has-success": form.password.$valid && submitted,\
         "has-error": form.password.$invalid && submitted }')
           label Password
-          input.form-control(type='password', name='password', ng-model='user.password', ng-minlength='3', required='', mongoose-error='')
+          input.form-control(type='password', name='password', ng-model='user.password', ng-minlength='3', required='')
           p.help-block(ng-show='(form.password.$error.minlength || form.password.$error.required) && submitted')
             | Password must be at least 3 characters.
-          p.help-block(ng-show='form.password.$error.mongoose')
+          p.help-block(ng-show='form.password.$error.reject')
             | {{ errors.password }}
 
         div
@@ -41,10 +41,4 @@ div(ng-include='"components/navbar/navbar.html"')
 
 
         hr
-
-        div
-          a.btn.btn-google-plus(href='', ng-click='loginOauth("google")')
-            i.fa.fa-google-plus
-            |  Connect with Google+
-          = ' '
   hr
