--- a/client/app/account/login/login.template.jade
+++ b/client/app/account/login/login.template.jade
@@ -6,15 +6,15 @@
     .col-sm-12
       form.form(name='form', ng-submit='login(form)', novalidate='')
         .form-group
-          label Email
-          input.form-control(type='text', name='email', ng-model='user.email')
+          label Login Name
+          input.form-control(type='text', name='login', ng-model='user.login')
         .form-group
           label Password
           input.form-control(type='password', name='password', ng-model='user.password')
 
         .form-group.has-error
-          p.help-block(ng-show='form.email.$error.required && form.password.$error.required && submitted')
-            | Please enter your email and password.
+          p.help-block(ng-show='form.login.$error.required && form.password.$error.required && submitted')
+            | Please enter your login and password.
           p.help-block {{ errors.other }}
 
         div
@@ -26,9 +26,5 @@
 
         hr
 
-        div
-          a.btn.btn-google-plus(href='', ng-click='loginOauth("google")')
-            i.fa.fa-google-plus
-            |  Connect with Google+
-          = ' '
+
   hr
