--- a/client/assets/stylesheets/less/main.less
+++ b/client/assets/stylesheets/less/main.less
@@ -24,6 +24,20 @@
     padding: 0.2em 0;
 }
 
+body {
+  margin: 0px 0px;
+  padding: 0px 0px;
+}
+.wrapper {
+  width: auto;
+  margin: 0px 0px;
+  background-color: #fff;
+  @media all and (min-width: 640px) {
+    padding: 0px 10%;
+  }
+
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .container {
