--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -1,34 +1,55 @@
-div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
-  div.container
-    div.navbar-header
-      button.navbar-toggle(type='button', ng-click='isCollapsed = !isCollapsed')
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand(href='/') mtp
+nav.navbar(ng-controller='NavbarCtrl')
+    div.navline
 
-    div#navbar-main.navbar-collapse.collapse(collapse='isCollapsed')
-      ul.nav.navbar-nav
-        li(ng-repeat='item in menu', ng-class='{active: isActive(item.link)}')
-          a(ng-href='{{item.link}}') {{item.title}}
+    div.menu
+        ul
+            li(ng-class="{active: activeMenuEntry === 'home'}", data-ng-click="setActiveMenuEntry('home')")
+                a(data-ng-show="isLoggedIn()", href="/home") Home
+                a(data-ng-hide="isLoggedIn()", href="/") Home
+            li(ng-class="{active: activeMenuEntry === 'about'}", data-ng-click="setActiveMenuEntry('about')")
+                a(href="/about") About
+            li(ng-class="{active: activeMenuEntry === 'settings'}", data-ng-click="setActiveMenuEntry('settings')", data-ng-show="isLoggedIn()")
+                a(href="/settings") Settings
+            li(data-ng-class="{active: activeMenuEntry === 'login'}", data-ng-click="setActiveMenuEntry('login')")
+                a(data-ng-hide="isLoggedIn()", href="/login") Login
+                a(data-ng-show="isLoggedIn()", href="javascript:void(0)", data-ng-click="logout()") Logout
 
-        li(ng-show='isAdmin()', ng-class='{active: isActive("/admin")}')
-          a(href='/admin') Admin
 
-      ul.nav.navbar-nav.navbar-right
-        li(ng-hide='isLoggedIn()', ng-class='{active: isActive("/signup")}')
-          a(href='/signup') Sign up
+    div.header
+        img.logo(src="assets/images/logo.png", alt="MTP")
+        | Music Training Planner
 
-        li(ng-hide='isLoggedIn()', ng-class='{active: isActive("/login")}')
-          a(href='/login') Login
 
-        li(ng-show='isLoggedIn()')
-          p.navbar-text Hello {{ getCurrentUser().name }}
+    //div.container
+      div.navbar-header
+        button.navbar-toggle(type='button', ng-click='isCollapsed = !isCollapsed')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='/') mtp
 
-        li(ng-show='isLoggedIn()', ng-class='{active: isActive("/settings")}')
-          a(href='/settings')
-            span.glyphicon.glyphicon-cog
+      div#navbar-main.navbar-collapse.collapse(collapse='isCollapsed')
+        ul.nav.navbar-nav
+          li(ng-repeat='item in menu', ng-class='{active: isActive(item.link)}')
+            a(ng-href='{{item.link}}') {{item.title}}
 
-        li(ng-show='isLoggedIn()', ng-class='{active: isActive("/logout")}')
-          a(href='', ng-click='logout()') Logout
+          li(ng-show='isAdmin()', ng-class='{active: isActive("/admin")}')
+            a(href='/admin') Admin
+
+        ul.nav.navbar-nav.navbar-right
+          li(ng-hide='isLoggedIn()', ng-class='{active: isActive("/signup")}')
+            a(href='/signup') Sign up
+
+          li(ng-hide='isLoggedIn()', ng-class='{active: isActive("/login")}')
+            a(href='/login') Login
+
+          li(ng-show='isLoggedIn()')
+            p.navbar-text Hello {{ getCurrentUser().name }}
+
+          li(ng-show='isLoggedIn()', ng-class='{active: isActive("/settings")}')
+            a(href='/settings')
+              span.glyphicon.glyphicon-cog
+
+          li(ng-show='isLoggedIn()', ng-class='{active: isActive("/logout")}')
+            a(href='', ng-click='logout()') Logout
