--- a/client/app/account/login/login.template.jade
+++ b/client/app/account/login/login.template.jade
@@ -1,30 +1,25 @@
 .container
-  .row
-    .col-sm-12
-      h1 Login
+    .row
+        .col-sm-12
+            h1 Login
 
-    .col-sm-12
-      form.form(name='form', ng-submit='login(form)', novalidate='')
-        .form-group
-          label Login Name
-          input.form-control(type='text', name='login', ng-model='user.login')
-        .form-group
-          label Password
-          input.form-control(type='password', name='password', ng-model='user.password')
-
-        .form-group.has-error
-          p.help-block(ng-show='form.login.$error.required && form.password.$error.required && submitted')
-            | Please enter your login and password.
-          p.help-block {{ errors.other }}
-
-        div
-          button.btn.btn-inverse.btn-lg.btn-login(type='submit')
-            | Login
-          = ' '
-          a.btn.btn-default.btn-lg.btn-register(href='/signup')
-            | Register
-
-        hr
-
-
-  hr
+                .col-sm-12
+            form.form(name='form', ng-submit='login(form)', novalidate='')
+                .form-group
+                    label Email
+                    input.form-control(type='text', name='email', ng-model='user.email')
+                .form-group
+                    label Password
+                    input.form-control(type='password', name='password', ng-model='user.password')
+                .form-group.has-error
+                    p.help-block(ng-show='form.email.$error.required && form.password.$error.required && submitted')
+                        | Please enter your email and password.
+                    p.help-block {{ errors.other }}
+                        div
+                    button.btn.btn-inverse.btn-lg.btn-login(type='submit')
+                        | Login
+                    = ' '
+                    a.btn.btn-default.btn-lg.btn-register(href='/signup')
+                        | Register
+                        hr
+                        div
