--- a/client/app/admin/admin.template.jade
+++ b/client/app/admin/admin.template.jade
@@ -6,6 +6,6 @@
     li.list-group-item(ng-repeat='user in users')
       strong {{user.name}}
       br
-      span.text-muted {{user.login}}
+      span.text-muted {{user.email}}
       a.trash(ng-click='delete(user)')
         span.glyphicon.glyphicon-trash.pull-right
