--- a/client/app/main/main.template.jade
+++ b/client/app/main/main.template.jade
@@ -8,15 +8,30 @@ header#banner.hero-unit
 .container
   .row
     .col-lg-12
-      h1.page-header Features:
-      ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='thing in awesomeThings')
-        li
-          a(href='#', tooltip='{{thing.info}}')
-            | {{thing.name}}
-      p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-      p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-      p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-      p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-      p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-      p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-
+      h1.page-header Motivation
+      | I'm learning how to play piano since three years. My former teacher was my grandma who tried to teach me with great patience the basic techniques and a lot more. Thereby I have to mention that I learn these techniques not that fast (I'm over 35 years old - things are going slower now). What am I training? I'm training the exercises my grandma gave me (each week new exercises depending on my progress).
+      | Now I moved from Berlin to Stockholm and I have no teacher anymore (I will have one - but it will take some time). So now I don't now what to train because nobody is giving me some exercises. I'll have to give me exercises by myself, but that's not that easy as you think.
+      | I know about 25 little music pieces and even more little exercises. I don't want to start really new exercises while I don't have a teacher. I'm doing this to prevent me from learning it the wrong way (technique) - it's hard to change a learned technique if you got it once... So I try to get better with the pieces/exercises I already know - there's enough to learn even if you played a piece more than 100 times... Also I have to repeat all pieces/exercises every e.g. week to not forget them (I thing it's common at my age :). But I don't have time to repeat everything within one training session. So I have to remember what have I trained last session and the session before and so on - THIS IS (AT LEAST FOR ME) NOT POSSIBLE - and that's the problem which should be addressed by the music training planer :)
+      br
+      br
+      | The music training planer should be able to:
+      ul
+        li let me enter my training pieces
+            ul
+                li expected training time (e.g. this exercise should take about 5 minutes)
+                li with my current (self guessed) progress (e.g. this piece is so easy that I can play it with closed eyes while I'm really drunk)
+                li some kind of priority (e.g. to mark pieces which are not worth to train every day because they're long and boring - no new techniques)
+        li let me create a plan for the next training session (useful for the time I'll have a teacher again)
+            ul
+                li with as few interaction as possible (the teacher should teach me and not waiting for me updating my plan - that is too expensive)
+        li create a adhoc plan depending on my time (e.g. 1/2 hour)
+            ul
+                li it should be done in a intelligent way to maximize my training effects (e.g. the pieces which I'm not good at more often than easy pieces)
+        li be easy to use
+            ul
+                li I want to have it on my IPad, which I'll put on the piano
+                li when I'm training a piece/exercise I want to enter my progress with only a few interactions - the progress should affect the adhoc plan creation I mentioned earlier
+        li control the time
+            ul
+                li I have only 1/2 hour to train, so he should remind me when it's time to go on with the next exercise - therefor I need something like start session/piece/exercise
+                li I think there thousands of improvements but let's start with this :)
