--- a/client/app/account/login/login.template.jade
+++ b/client/app/account/login/login.template.jade
@@ -1,22 +1,25 @@
-.container
+.container(ng-controller='LoginCtrl', id='login_page')
     .row
         .col-sm-12
             h1 Login
 
-                .col-sm-12
-            form.form(name='form', ng-submit='login(form)', novalidate='')
+            p(ng-show='isLoggedIn()', id='login_welcome')
+                | Hi {{user.name}}...
+
+            form.form(id='login_form', name='form', ng-submit='login(form)', novalidate='', ng-hide='isLoggedIn()')
                 .form-group
                     label Email
-                    input.form-control(type='text', name='email', ng-model='user.email')
+                    input.form-control(type='email', id='login_email', ng-model='user.email', required='true')
                 .form-group
                     label Password
-                    input.form-control(type='password', name='password', ng-model='user.password')
+                    input.form-control(type='password',id='login_password', ng-model='user.password', required='true')
                 .form-group.has-error
                     p.help-block(ng-show='form.email.$error.required && form.password.$error.required && submitted')
                         | Please enter your email and password.
-                    p.help-block {{ errors.other }}
+                    p.help-block(id='login_server_error_msg', ng-if='errors.other')
+                        | {{ errors.other }}
                         div
-                    button.btn.btn-inverse.btn-lg.btn-login(type='submit')
+                    button.btn.btn-inverse.btn-lg.btn-login(id='login_submit', type='submit')
                         | Login
                     = ' '
                     a.btn.btn-default.btn-lg.btn-register(href='/signup')
