--- a/client/app/account/settings/settings.template.jade
+++ b/client/app/account/settings/settings.template.jade
@@ -3,10 +3,10 @@
         | Existing Exercises
     ul
         li(data-ng-repeat="e in exercises")
-            | {{e.name}}
+            a(ng-click='edit(e)') {{e.name}} ({{e._id}})
 
     h1
-        | Create New Exercise
+        | Upsert New Exercise
 
     div
         label(for="e_name")
@@ -25,13 +25,11 @@
             | Source
         input(id="e_source",data-ng-model="exercise.source", type="text")
         br
-        div(data-ng-repeat="h in exercise.hints track by $index")
-            label(for="e_hint_{{$index}}")
-                | Hint
-            input(id="e_hint_{{$index}}", type="text", value="{{exercise.hints[$index]}}")
+        label(for="e_hint")
+            | Hint
+        textarea(id="e_hint", type="text", data-ng-model="exercise.hints")
 
-        button(data-ng-click="addHint()")
-            | add hint
+
         br
         label(for="e_level")
             | Level (1-20)
@@ -59,7 +57,7 @@
 
         br
         br
-        button(data-ng-click="createExercise()")
+        button(data-ng-click="upsertExercise()")
             | Save Exercise
 
     h1
