--- a/client/app/home/home.template.jade
+++ b/client/app/home/home.template.jade
@@ -3,5 +3,5 @@
 header#banner.hero-unit
   .container
     h1 Welcome {{currentUser.name}}!
-    p.lead Here we are....
+    p.lead A nice looking dashboard coming soon...
 
