--- a/client/assets/stylesheets/less/components/navbar.less
+++ b/client/assets/stylesheets/less/components/navbar.less
@@ -58,9 +58,8 @@ nav.navbar {
 
 
       li {
-        width: 59px;
         float: left;
-        margin: 5px;
+        padding: 0px 10px;
         text-align: center;
         border-right : solid 1px white;
         color: white;
@@ -85,5 +84,5 @@ nav.navbar {
 
 
 
-  
+
 }
