--- a/client/assets/stylesheets/less/main.less
+++ b/client/assets/stylesheets/less/main.less
@@ -2,6 +2,12 @@
  *Font Awesome Fonts
  */
 
+.main {
+  position:relative;
+  min-height:100%;
+  padding-bottom: 100px;
+}
+
 @font-face {
     font-family: 'FontAwesome';
     src: url('../../../bower_components/font-awesome/fonts/fontawesome-webfont.eot?v=4.1.0');
