better modularization with angular-ui states

--- a/client/app/training/training.template.jade
+++ b/client/app/training/training.template.jade
@@ -2,8 +2,11 @@
 header#banner.hero-unit
   .container.training
     h1 Training
-    div(data-ng-hide="exercise")
+    div
       p Manually training - select your exercise and update your experience.
+      div
+        label(for="exercise_filter") Search for
+        input(id="exercise_filter", data-ng-model="exercise_filter", type="text")
       table.exercise-selection
         tr
           th Name
@@ -11,24 +14,11 @@ header#banner.hero-unit
           th Duration
           th Progress
           th Times played
-        tr(data-ng-repeat="e in exercises", ng-click="selectExercise(e)", ng-class="{selected: e == exercise}")
+        tr(data-ng-repeat="e in exercises | filter: exercise_filter", ng-click="selectExercise(e)", ng-class="{selected: e == exercise}")
           td {{e.name}}
           td.right {{e.level}}
           td.right {{e.replay}} x {{e.duration}} min
-          td.right {{getProgress(e)}}
-          td.right {{e.history.length}}
+          td.right {{e.progress}}
+          td.right {{e.times}}
 
-    button(ng-show="exercise", class="abort",ng-click="exercise = undefined") Go Back
-    div.training-exercise(ng-show="exercise")
-      h1 {{exercise.name}}
-      div.exercise-info
-        p Source: {{exercise.source}}
-        p Play: {{exercise.replay}} x {{exercise.duration}} min
-        p {{exercise.hints}}
-      div(id="cal-heatmap")
-
-      slider(floor="0", ceiling="{{exercise.max_experience}}", ng-model="experience")
-      button(class="submit",ng-click="exercise_done(exercise)") I played this exercise one time and I've updated the progress.
-
-
-
+    ui-view
