--- a/client/assets/stylesheets/less/training.less
+++ b/client/assets/stylesheets/less/training.less
@@ -24,13 +24,10 @@
     }
   }
 
-  button.abort {
+  .abort {
     display: block;
     float: right;
     cursor: pointer;
-    &:hover {
-      background-color: khaki;
-    }
   }
 
   div.training-exercise {
